# lab_6

./: .gitignore  CMakeLists.txt  README.md
include/: lab_6.hpp  lab_6_test.hpp
src/: lab_6.cpp  lab_6_main.cpp  lab_6_test.cpp
